--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -363,7 +363,7 @@
                     updateUI(null);
                 }
             } else {
-                updateUI(null); // No token, show login forms
+                updateUI(null);
             }
         }
 
